# WinJitsu

./: .gitattributes  .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
arch/: .SRCINFO  PKGBUILD
src/winjitsu/: __init__.py  actions.py  cache.py  cli.py  config.py  daemon.py  screen.py  window.py  winjitsu.py
