[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "WinJitsu"
version = "0.2.0"
description = "A slick, animated window management tool for Linux (X11)"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
]
dependencies = ["python-xlib"]

[project.scripts]
winjitsu = "winjitsu:main"

[tool.setuptools]
packages = ["winjitsu"]
package-dir = {"" = "src"}
